--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ coverage
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
-
+.fusebox/
+dist/
 # Bower dependency directory (https://bower.io/)
 bower_components
 
