--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "devDependencies": {
-    "fuse-box": "^3.3.0-next.9",
-    "typescript": "^2.9.1"
-  },
   "name": "fuse-react",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.js",
   "repository": "git@github.com:fuse-box/fuse-react.git",
   "author": "nchanged <nchanged@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@types/react": "^16.3.17",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react": "*",
+    "react-dom": "*"
+  },
+  "devDependencies": {
+    "fuse-box": "^3.3.0-next.9",
+    "typescript": "^2.9.1"
   }
 }
