--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "ES7",
+    "target": "esnext",
     "jsx": "react",
     "importHelpers": true,
     "emitDecoratorMetadata": true,
