--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "fuse-react",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:fuse-box/fuse-react.git",
   "author": "nchanged <nchanged@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@types/react": "^16.3.17",
+    "deep-equal": "^1.0.1",
     "react": "*",
     "react-dom": "*"
   },
