--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fuse-react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "repository": "git@github.com:fuse-box/fuse-react.git",
   "author": "nchanged <nchanged@gmail.com>",
@@ -8,11 +8,13 @@
   "dependencies": {
     "@types/react": "^16.3.17",
     "deep-equal": "^1.0.1",
+    "path-to-regexp": "^2.2.1",
     "react": "*",
     "react-dom": "*"
   },
   "devDependencies": {
     "fuse-box": "^3.3.0-next.9",
+    "node-sass": "^4.9.0",
     "typescript": "^2.9.1"
   }
 }
