--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fuse-react",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "main": "index.js",
   "repository": "git@github.com:fuse-box/fuse-react.git",
   "author": "nchanged <nchanged@gmail.com>",
@@ -13,6 +13,7 @@
     "react-dom": "*"
   },
   "devDependencies": {
+    "@types/node": "^10.5.3",
     "fuse-box": "^3.3.0-next.9",
     "node-sass": "^4.9.0",
     "typescript": "^2.9.1"
