--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "fuse-react",
-  "version": "2.0.6",
-  "main": "index.js",
-  "repository": "git@github.com:fuse-box/fuse-react.git",
   "author": "nchanged <nchanged@gmail.com>",
-  "license": "MIT",
   "dependencies": {
-    "@types/react": "^16.3.17",
     "deep-equal": "^1.0.1",
     "path-to-regexp": "^2.2.1",
-    "react": "*",
-    "react-dom": "*"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/node": "^10.5.3",
-    "fuse-box": "^3.5.0-next.10",
-    "node-sass": "^4.9.3",
-    "typescript": "^2.9.1"
-  }
+    "@types/react": "^16.9.35",
+    "fuse-box": "^4.0.0-next.438",
+    "node-sass": "^4.14.1",
+    "ts-node": "^8.10.2"
+  },
+  "license": "MIT",
+  "main": "index.js",
+  "name": "fuse-react",
+  "repository": "git@github.com:fuse-box/fuse-react.git",
+  "scripts": {
+    "next": "ts-node -T fuse.ts publish",
+    "start": "ts-node -T fuse.ts"
+  },
+  "version": "3.0.4"
 }
